@@ -5,21 +5,20 @@
  * See the file "LICENSE" in the source distribution for details *
  *****************************************************************/
 
-#ifndef _PCI_ADDRESS_C
-#define _PCI_ADDRESS_C
+#ifndef _PCI_HEADER_C
+#define _PCI_HEADER_C
 
 #include <types.h>
+#include <asm/asm.h>
+#include <pci/pci.h>
 
-uint32_t pci_config_address_build(uint8_t bus, uint8_t device, uint8_t function, uint8_t offset, uint8_t enabled){
-	uint32_t r;
+uint16_t pci_header_read_vendor(uint8_t bus, uint8_t device){
+	uint32_t register_dword;
 	
-	r = (((uint32_t)enabled) << 31) & 0x80000000;
-	r |= (((uint32_t)bus) << 16) & 0x00FF0000;
-	r |= (((uint32_t)device) << 11) & 0x0000F800;
-	r |= (((uint32_t)function) << 8) & 0x00000700;
-	r |= ((uint32_t)offset) & 0x000000FF;
+	asm_out_d(PCI_CONFIG_ADDRESS_PORT, pci_config_address_build(bus, device, 0, 0, 1));
+	register_dword = asm_in_d(PCI_CONFIG_DATA_PORT);
 	
-	return r;
+	return (uint16_t)(register_dword & 0x0000FFFF);
 }
 
 #endif
