@@ -1,3 +1,6 @@
+2020-08-22
+	* added krealloc (kmw)
+
 2020-08-19
 	* VGA console driver now interprets tab characters (kmw)
 	* PCI bus scan (kmw)
